apps/ai-travel/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ai-travel
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ai-travel-ingress
spec:
  rules:
  - host: ai-travel.35-179-152-135.nip.io
    http:
      paths:
      - backend:
          service:
            name: ai-travel
            port:
              number: 8080
        path: /
        pathType: Prefix
  #tls:
  #- hosts:
  # - ai-travel.35-179-152-135.nip.io
